# AIEC01

./: .gitignore
00_Docs/Prerequisites/: vscode_uv_jupyter_kernel_setup.md
01_Dense_Vector_Retrieval/: 01_Cat_Health_Vector_RAG_LangChain_Qdrant.ipynb  README.md
02_Agentic_RAG_LangGraph_LangChain/: 01_Cat_Health_Agentic_RAG_LangGraph_LangChain.ipynb
03_Agent_Memory_LangGraph_LangChain/: 01_Cat_Health_Agent_Memory_LangGraph_LangChain.ipynb
04_Multi_Agent_Systems/: 01_Cat_Health_Deep_Research_Multi_Agent_LangChain_LangGraph.ipynb
05_Synthetic_Data_Generation_for_RAG_Evals/: 01_Cat_Health_Synthetic_Data_Generation_Ragas_LangSmith.ipynb
06_Agentic_RAG_Evaluation/: 01_Metal_Price_Agent_Evaluation_Ragas_LangGraph.ipynb
07_Advanced_Retrievers/: 01_Cat_Health_Advanced_Retrieval.ipynb
08_MCP/: README.md  catshop.db  client.py  custom_client.py  notes.txt  server.py
08_MCP/app/: db.py  notes.txt  server.py  tools.py
09_Agent_Servers/: README.md  docker-compose.yml  langgraph.json  session_summary.md
09_Agent_Servers/app/graphs/: __init__.py  agent_with_helpfulness.py
09_Agent_Servers/frontend/app/: page.tsx
09_Agent_Servers/frontend/components/: chat.tsx
10_LLM_Servers/: README.md  activity1_ragas_eval.py  endpoint_slammer.ipynb  pyproject.toml
14_multimodal_rag/: multimodal_rag.ipynb  pyproject.toml
15_Reasoning_Model_Fine_Tuning/: ColabVersion__01_Reasoning_Fine_Tuning_Unsloth_GRPO.ipynb
