[project]
name = "multimodal-rag-vlm"
version = "1.0.0"
description = "Session 14: Multi-Modal RAG with Vision-Language Models — AI Makerspace"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-qdrant>=0.2",
    "qdrant-client>=1.12",
    "sentence-transformers>=2.4.0,<3.0",
    "pillow>=10.0",
    "matplotlib>=3.9",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "opencv-python-headless>=4.10",
    "python-dotenv>=1.0",
    "torch==2.2.0",
    "ipykernel>=6.29",
    "numpy<2",
    "transformers>=4.33.0,<4.37.0",
    "huggingface-hub<0.20.0",
    "setuptools",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "jupyter>=1.1",
]
